--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,6 @@ compiler:
   - gcc
   - clang
 
-env:
-  global:
-    - GLFW_BUILD_EXAMPLES=0
-    - GLFW_BUILD_TESTS=0
-  matrix:
-    - BUILD_TYPE=Debug
-    - BUILD_TYPE=Release
-
 # necessary for GLFW
 addons:
     apt:
@@ -27,7 +19,7 @@ addons:
 before_script:
   - mkdir -p build
   - cd build  
-  - cmake -DCMAKE_BUILD_TYPE=${BUILD_TYPE} ..
+  - cmake -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -D..
 
 script:
   - cmake --build . -- -j10
