Window up and running using glfw

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
-project(ray)
+project(ray CXX)
 cmake_minimum_required(VERSION 3.0)
+
+find_package(OpenGL REQUIRED)
 
 set(GLFW_BUILD_EXAMPLES false)
 set(GLFW_BUILD_TESTS false)
 add_subdirectory(contrib/glfw)
 
+set(CMAKE_CXX_STANDARD 11)
 
+add_subdirectory(samples)
