--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,17 @@
 language: cpp
 
-compiler:
-  - gcc
-  - clang
+dist: trusty
+compiler: gcc
+  
+before_install:
+  # C++14
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+
+install: 
+  # C++14
+  - sudo apt-get install -qq g++-6
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
 
 # necessary for GLFW
 addons:
