--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
     apt:
         sources:
             - kubuntu-backports
+            - llvm-toolchain-trusty-5.0
         packages:
             - cmake
             - libxrandr-dev
@@ -18,6 +19,15 @@ addons:
             - libglu1-mesa-dev
             - freeglut3-dev
             - mesa-common-dev
+            - clang-5.0
+
+env:
+  global:
+    - CC=clang-5.0
+    - CXX=clang++-5.0    
+  matrix:
+    - BUILD_TYPE=Debug
+    - BUILD_TYPE=Release
 
 before_script:
   - mkdir -p build
