--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,13 @@ addons:
 
 env:
   global:
-    - CC=clang-5.0
-    - CXX=clang++-5.0    
+    - SETUP_CLANG="CC=clang-5.0 && CXX=clang++-5.0"
   matrix:
     - BUILD_TYPE=Debug
     - BUILD_TYPE=Release
+
+before_install:
+  - eval "${SETUP_CLANG}"
 
 before_script:
   - mkdir -p build
