--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: cpp
 
 matrix:
   include:  
+
+    ## Linux(Trusty) - GCC-4.8 - Release
     - os: linux
       dist: trusty
       compiler: gcc
@@ -20,6 +22,28 @@ matrix:
             - mesa-common-dev
       env:
         - MATRIX_EVAL="BUILD_TYPE=Release"
+
+    ## Linux(Trusty) - CLANG 5 - Release
+    - os: linux
+      dist: trusty
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - kubuntu-backports
+            - llvm-toolchain-trusty-5.0            
+          packages:
+            - cmake
+            - libxrandr-dev
+            - libxinerama-dev
+            - libxcursor-dev
+            - libxi-dev
+            - libglu1-mesa-dev
+            - freeglut3-dev
+            - mesa-common-dev
+            - clang-5.0
+      env:
+        - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0 && BUILT_TYPE=Release"
 
 
 before_install:
