Added loading of GL extensions using glad

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,17 @@
-project(ray CXX)
+project(ray)
 cmake_minimum_required(VERSION 3.0)
 
+###### OpenGL
 find_package(OpenGL REQUIRED)
 
+###### GLFW
 set(GLFW_BUILD_EXAMPLES false)
 set(GLFW_BUILD_TESTS false)
 add_subdirectory(contrib/glfw)
 
-set(CMAKE_CXX_STANDARD 14)
+###### GLAD
+add_library(glad contrib/glfw/deps/glad.c)
+target_include_directories(glad PUBLIC contrib/glfw/deps/)
 
+###### Samples
 add_subdirectory(samples)
