--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,3 +1,6 @@
+
+set(CMAKE_CXX_STANDARD 11)
+
 include_directories(
     ../include/
     ../contrib/glfw/include
@@ -5,7 +8,9 @@ include_directories(
 
 link_libraries(
     glfw
+    glad
     ${OPENGL_gl_LIBRARY}    
 )
 
 add_executable(window window.cpp)
+
