--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ matrix:
             - libglu1-mesa-dev
             - freeglut3-dev
             - mesa-common-dev
+            - libboost-dev
       env:
         - MATRIX_EVAL="BUILD_TYPE=Release"
 
@@ -42,6 +43,7 @@ matrix:
             - freeglut3-dev
             - mesa-common-dev
             - clang-5.0
+            - libboost-dev
       env:
         - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0 && BUILT_TYPE=Release"
 
