Textured Quad rendered on the screen

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "contrib/googletest"]
 	path = contrib/googletest
 	url = https://github.com/google/googletest.git
+[submodule "contrib/stb"]
+	path = contrib/stb
+	url = https://github.com/nothings/stb.git
