Added basic linear algebra (vec2/3/4, mat4...)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,5 +7,10 @@ endmacro(add_unit_test)
 
 add_unit_test(platform PrintTests)
 add_unit_test(assets   BitmapTests)
+add_unit_test(math     ScalarTests)
+add_unit_test(math     Vector2Tests)
+add_unit_test(math     Vector3Tests)
+add_unit_test(math     Vector4Tests)
+add_unit_test(math     MatrixTests)
 
 
