Basic rotating cube working

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,11 +6,12 @@ macro(add_unit_test SUBDIR TARGET)
 endmacro(add_unit_test)
 
 add_unit_test(platform PrintTests)
-add_unit_test(assets   BitmapTests)
-add_unit_test(math     ScalarTests)
-add_unit_test(math     Vector2Tests)
-add_unit_test(math     Vector3Tests)
-add_unit_test(math     Vector4Tests)
-add_unit_test(math     MatrixTests)
+add_unit_test(assets BitmapTests)
+add_unit_test(math ScalarTests)
+add_unit_test(math Vector2Tests)
+add_unit_test(math Vector3Tests)
+add_unit_test(math Vector4Tests)
+add_unit_test(math MatrixTests)
+add_unit_test(math QuaternionTests)
 
 
