--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,7 @@ add_unit_test(math Vector2Tests)
 add_unit_test(math Vector3Tests)
 add_unit_test(math Vector4Tests)
 add_unit_test(math MatrixTests)
+add_unit_test(math UtilsTests)
 add_unit_test(math QuaternionTests)
 add_unit_test(math TransformableTests)
 
