--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ matrix:
             - freeglut3-dev
             - mesa-common-dev
             - libboost-dev
+            - libboost-filesystem-dev
             - g++-5
       env:
         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && BUILD_TYPE=Release"
@@ -45,6 +46,7 @@ matrix:
             - freeglut3-dev
             - mesa-common-dev
             - clang-5.0
+            - libboost-filesystem-dev
             - libboost-dev
       env:
         - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0 && BUILT_TYPE=Release"
