renamed the samples in order of complexity and moved Mesh to entities namespace

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -3,10 +3,10 @@ macro(add_sample TARGET)
     target_link_libraries(${TARGET} ray)
 endmacro(add_sample)
 
-add_sample(window)
-add_sample(rectangle)
-add_sample(texture)
-add_sample(cube)
-add_sample(teapot)
-add_sample(camera)
+add_sample(00_window)
+add_sample(01_rectangle)
+add_sample(02_texture)
+add_sample(03_cube)
+add_sample(04_teapot)
+add_sample(05_camera)
 
