--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -9,5 +9,6 @@ add_sample(02_texture)
 add_sample(03_cube)
 add_sample(04_teapot)
 add_sample(05_camera)
-add_sample(06_font)
+add_sample(06_lighting)
+add_sample(07_font)
 
