Basic fps counter in the upper left corner of the screen up and running

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ add_library(ray
     src/ray/assets/Bitmap.cpp
     src/ray/assets/Font.cpp
     src/ray/gl/Texture.cpp
+    src/ray/gl/TextureAtlas.cpp
     src/ray/platform/FileSystem.cpp
 )
 target_include_directories(ray PUBLIC include)
