--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -12,4 +12,5 @@ add_sample(05_camera)
 add_sample(06_lighting)
 add_sample(07_font)
 add_sample(08_text)
+add_sample(09_skybox)
 add_sample(99_all)
