initial sample for framebuffer

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -13,4 +13,5 @@ add_sample(06_lighting)
 add_sample(07_font)
 add_sample(08_text)
 add_sample(09_skybox)
+add_sample(10_framebuffer)
 add_sample(99_all)
