--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,11 @@ macro(add_unit_test SUBDIR TARGET)
     add_executable(${TARGET} ${SUBDIR}/${TARGET}.cpp)
     add_test(${TARGET} ${TARGET})
     target_include_directories(${TARGET} PRIVATE gtest)
-    target_link_libraries(${TARGET} ray gtest gtest_main pthread)
+    if(WIN32)
+        target_link_libraries(${TARGET} ray gtest gtest_main)
+    else()
+        target_link_libraries(${TARGET} ray gtest gtest_main pthread)
+    endif()
 endmacro(add_unit_test)
 
 add_unit_test(platform PrintTests)
