--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,10 +2,9 @@ macro(add_unit_test SUBDIR TARGET)
     add_executable(${TARGET} ${SUBDIR}/${TARGET}.cpp)
     add_test(${TARGET} ${TARGET})
     target_include_directories(${TARGET} PRIVATE gtest)
-    if(WIN32)
-        target_link_libraries(${TARGET} ray gtest gtest_main)
-    else()
-        target_link_libraries(${TARGET} ray gtest gtest_main pthread)
+    target_link_libraries(${TARGET} ray gtest gtest_main)
+    if(NOT WIN32)
+        target_link_libraries(${TARGET} ray pthread)
     endif()
 endmacro(add_unit_test)
 
