Simplify travis and cmakefile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,8 @@ target_link_libraries(boost INTERFACE Boost::filesystem Boost::system)
 find_package(OpenGL REQUIRED)
 
 ###### GLFW
-set(GLFW_BUILD_EXAMPLES false)
-set(GLFW_BUILD_TESTS false)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 add_subdirectory(contrib/glfw)
 
 ###### GLAD
