--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ templates:
         sources:
           - kubuntu-backports
           - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-5.0            
+          - llvm-toolchain-trusty-4.0
+          - llvm-toolchain-trusty-5.0
+          - llvm-toolchain-trusty-6.0
+          - llvm-toolchain-trusty-7
         packages:
           - cmake
           - libxrandr-dev
@@ -24,6 +27,20 @@ templates:
           - mesa-common-dev
           - libboost-dev
           - libboost-filesystem-dev
+          - g++-4.9
+          - gcc-4.9
+          - g++-5
+          - gcc-5 
+          - g++-6
+          - gcc-6
+          - g++-7
+          - gcc-7 
+          - g++-8
+          - gcc-8 
+          - clang-4.0
+          - clang-5.0 
+          - clang-6.0
+          - clang-7 
 
 matrix:
   include:  
@@ -31,14 +48,35 @@ matrix:
     ###########################################################################
     # GCC on Linux 
     ###########################################################################
-    - env: GENERATOR="Unix Makefiles" CXX=g++-5 && CC=gcc-5 
+    - env: GENERATOR="Unix Makefiles" CXX=g++-4.9 CC=gcc-4.9
+      <<: *linux
+
+    - env: GENERATOR="Unix Makefiles" CXX=g++-5 CC=gcc-5
+      <<: *linux
+      
+    - env: GENERATOR="Unix Makefiles" CXX=g++-6 CC=gcc-6
+      <<: *linux
+      
+    - env: GENERATOR="Unix Makefiles" CXX=g++-7 CC=gcc-7
+      <<: *linux
+      
+    - env: GENERATOR="Unix Makefiles" CXX=g++-8 CC=gcc-8
       <<: *linux
       
     ###########################################################################
-    # GCC on Linux 
+    # Clang on Linux 
     ###########################################################################
+    - env: GENERATOR="Unix Makefiles" CXX=clang++-4.0 CC=clang-4.0
+      <<: *linux
+
     - env: GENERATOR="Unix Makefiles" CXX=clang++-5.0 CC=clang-5.0
-      <<: *linux      
+      <<: *linux
+
+    - env: GENERATOR="Unix Makefiles" CXX=clang++-6.0 CC=clang-6.0
+      <<: *linux
+          
+    - env: GENERATOR="Unix Makefiles" CXX=clang++-7 CC=clang-7
+      <<: *linux
 
     ###########################################################################
     # MSVC on Windows
@@ -64,12 +102,15 @@ matrix:
       os: osx
       osx_image: xcode8.3
 
-script:
-  ###########################################################################
-  # Common flags
-  ###########################################################################
-  - export CMAKE_FLAGS="-DGLFW_BUILD_EXAMPLES=0 -DGLFW_BUILD_TESTS=0"
+    - env: GENERATOR="Unix Makefiles" CXX=clang++ CC=clang
+      os: osx
+      osx_image: xcode7.3
 
+    - env: GENERATOR="Unix Makefiles" CXX=clang++ CC=clang
+      os: osx
+      osx_image: xcode6.4
+
+script:
   ###########################################################################
   # Debug
   ###########################################################################
