--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ templates:
       - export PATH="/c/Program Files/CMake/bin":$PATH
     install:
       - choco install -y directx
+      - cat /c/ProgramData/chocolatey/logs/chocolatey.log
 
   linux: &linux
     addons:
@@ -48,51 +49,51 @@ matrix:
     ###########################################################################
     # Clang on OSX
     ###########################################################################
-    - env: GENERATOR="Unix Makefiles" CXX=clang++ CC=clang
-      os: osx
-      osx_image: xcode10
+    # - env: GENERATOR="Unix Makefiles" CXX=clang++ CC=clang
+    #   os: osx
+    #   osx_image: xcode10
 
-    - env: GENERATOR="Unix Makefiles" CXX=clang++ CC=clang
-      os: osx
-      osx_image: xcode9.4
+    # - env: GENERATOR="Unix Makefiles" CXX=clang++ CC=clang
+    #   os: osx
+    #   osx_image: xcode9.4
 
-    - env: GENERATOR="Unix Makefiles" CXX=clang++ CC=clang
-      os: osx
-      osx_image: xcode8.3
+    # - env: GENERATOR="Unix Makefiles" CXX=clang++ CC=clang
+    #   os: osx
+    #   osx_image: xcode8.3
 
-    - env: GENERATOR="Unix Makefiles" CXX=clang++ CC=clang
-      os: osx
-      osx_image: xcode7.3
+    # - env: GENERATOR="Unix Makefiles" CXX=clang++ CC=clang
+    #   os: osx
+    #   osx_image: xcode7.3
 
     ###########################################################################
     # GCC on Linux 
     ###########################################################################
-    - env: GENERATOR="Unix Makefiles" CXX=g++-5 CC=gcc-5
-      <<: *linux
+    # - env: GENERATOR="Unix Makefiles" CXX=g++-5 CC=gcc-5
+    #   <<: *linux
       
-    - env: GENERATOR="Unix Makefiles" CXX=g++-6 CC=gcc-6
-      <<: *linux
+    # - env: GENERATOR="Unix Makefiles" CXX=g++-6 CC=gcc-6
+    #   <<: *linux
       
-    - env: GENERATOR="Unix Makefiles" CXX=g++-7 CC=gcc-7
-      <<: *linux
+    # - env: GENERATOR="Unix Makefiles" CXX=g++-7 CC=gcc-7
+    #   <<: *linux
       
-    - env: GENERATOR="Unix Makefiles" CXX=g++-8 CC=gcc-8
-      <<: *linux
+    # - env: GENERATOR="Unix Makefiles" CXX=g++-8 CC=gcc-8
+    #   <<: *linux
       
     ###########################################################################
     # Clang on Linux 
     ###########################################################################
-    - env: GENERATOR="Unix Makefiles" CXX=clang++-4.0 CC=clang-4.0
-      <<: *linux
+    # - env: GENERATOR="Unix Makefiles" CXX=clang++-4.0 CC=clang-4.0
+    #   <<: *linux
 
-    - env: GENERATOR="Unix Makefiles" CXX=clang++-5.0 CC=clang-5.0
-      <<: *linux
+    # - env: GENERATOR="Unix Makefiles" CXX=clang++-5.0 CC=clang-5.0
+    #   <<: *linux
 
-    - env: GENERATOR="Unix Makefiles" CXX=clang++-6.0 CC=clang-6.0
-      <<: *linux
+    # - env: GENERATOR="Unix Makefiles" CXX=clang++-6.0 CC=clang-6.0
+    #   <<: *linux
           
-    - env: GENERATOR="Unix Makefiles" CXX=clang++-7 CC=clang-7
-      <<: *linux
+    # - env: GENERATOR="Unix Makefiles" CXX=clang++-7 CC=clang-7
+    #   <<: *linux
 
     ###########################################################################
     # MSVC on Windows
@@ -100,8 +101,8 @@ matrix:
     - env: GENERATOR="Visual Studio 15 2017 Win64"
       <<: *windows
 
-    - env: GENERATOR="Visual Studio 15 2017"
-      <<: *windows
+    # - env: GENERATOR="Visual Studio 15 2017"
+    #   <<: *windows
 
 script:
   ###########################################################################
