--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ templates:
       - export PATH="/c/Program Files/CMake/bin":$PATH
     install:
       - choco install -y directx
+    after_failure:
       - cat /c/ProgramData/chocolatey/logs/chocolatey.log
 
   linux: &linux
