Compiled on Win64 with /W2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,19 +14,19 @@ find_package(OpenGL REQUIRED)
 
 ###### DirectX
 # TODO(cme): find a more portable way to have this
-if(WIN32)
-    add_library(directx INTERFACE)
-    target_include_directories(directx INTERFACE "C:\\Program Files (x86)\\Microsoft DirectX SDK (June 2010)\\Include")
-    if(CMAKE_CL_64)
-        link_directories("C:\\Program Files (x86)\\Microsoft DirectX SDK (June 2010)\\Lib\\x64")
-    else()
-        link_directories("C:\\Program Files (x86)\\Microsoft DirectX SDK (June 2010)\\Lib\\x86")
-    endif()
-endif()
+# if(WIN32)
+#     add_library(directx INTERFACE)
+#     target_include_directories(directx INTERFACE "C:\\Program Files (x86)\\Microsoft DirectX SDK (June 2010)\\Include")
+#     if(CMAKE_CL_64)
+#         link_directories("C:\\Program Files (x86)\\Microsoft DirectX SDK (June 2010)\\Lib\\x64")
+#     else()
+#         link_directories("C:\\Program Files (x86)\\Microsoft DirectX SDK (June 2010)\\Lib\\x86")
+#     endif()
+# endif()
 
 macro(turn_on_all_warnings_as_error TARGET)
     if(WIN32)
-        target_compile_options(${TARGET} PRIVATE -Wall -WX)
+        target_compile_options(${TARGET} PRIVATE -W2 -WX -DNOMINMAX)
     else()
         target_compile_options(${TARGET} PRIVATE -Wall -Wextra -Werror)
     endif()    
