--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ templates:
     os: windows
     before_script:
       - export PATH="/c/Program Files/CMake/bin":$PATH
-    install:
-      - choco install -y directx
+    # NOTE(cme): does not work for some reason...
+    # install:
+    #   - choco install -y directx
 
   linux: &linux
     addons:
